--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ edition = "2021"
 members = [
     "2023/day-01",
     "2023/day-02",
-    "2023/day-03"
+    "2023/day-03",
+    "2023/day-04",
 ]
 
 [dependencies]
